--- a/DirectX_PKT/EngineBase/EngineBase.vcxproj
+++ b/DirectX_PKT/EngineBase/EngineBase.vcxproj
@@ -177,6 +177,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Transform.cpp" />
+    <ClCompile Include="TransformObject.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="EngineDebug.h" />
@@ -192,6 +193,7 @@
     <ClInclude Include="PathObject.h" />
     <ClInclude Include="PreCompile.h" />
     <ClInclude Include="Transform.h" />
+    <ClInclude Include="TransformObject.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
