--- a/DirectX_PKT/EngineCore/EngineCore.vcxproj
+++ b/DirectX_PKT/EngineCore/EngineCore.vcxproj
@@ -163,6 +163,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Actor.h" />
+    <ClInclude Include="ActorComponent.h" />
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="EngineCore.h">
       <SubType>
       </SubType>
@@ -172,9 +175,20 @@
       <SubType>
       </SubType>
     </ClInclude>
+    <ClInclude Include="EngineRenderTarget.h" />
+    <ClInclude Include="EngineTexture.h" />
+    <ClInclude Include="GameMode.h" />
+    <ClInclude Include="Level.h" />
     <ClInclude Include="PreCompile.h" />
+    <ClInclude Include="Renderer.h" />
+    <ClInclude Include="SceneComponent.h" />
+    <ClInclude Include="TickObject.h" />
+    <ClInclude Include="WorldObject.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Actor.cpp" />
+    <ClCompile Include="ActorComponent.cpp" />
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="EngineCore.cpp">
       <SubType>
       </SubType>
@@ -184,12 +198,20 @@
       <SubType>
       </SubType>
     </ClCompile>
+    <ClCompile Include="EngineRenderTarget.cpp" />
+    <ClCompile Include="EngineTexture.cpp" />
+    <ClCompile Include="GameMode.cpp" />
+    <ClCompile Include="Level.cpp" />
     <ClCompile Include="PreCompile.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="SceneComponent.cpp" />
+    <ClCompile Include="TickObject.cpp" />
+    <ClCompile Include="WorldObject.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
